<resources>
    <string name="app_name">iClass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="attendance">Attendance</string>
    <string name="textview">TextView</string>

    <string name="schedule">Schedule</string>
    <string name="todo">TODO</string>
    <string name="to_do">To-Do</string>
    <string name="to_do_list">To-Do List</string>
    <string name="notes">Notes</string>
    <string name="calculators">Calculators</string>

    //Login Strings
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="login_below_text">Enter your email address and password to access your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>

    //Register Strings
    <string name="sign_up">Sign Up</string>
    <string name="register_below_text">Fill the information to create an account and Sign Up to continue</string>
    <string name="mobile_hint_reg">Enter Mobile Number</string>
    <string name="email_hint_reg">Enter Email</string>
    <string name="password_hint_reg">Enter Password</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>

    //ToDoList Strings
    <string name="daily_tasks">Daily Tasks</string>
    <string name="generate_a_new_qr_code_that_includes_the_enrollment_code_for_the_grade_10_weekday_class">Generate a new QR code that includes the enrollment code for the Grade 10 weekday class</string>
    <string name="generate_a_qr_code">Generate a QR Code</string>
    <string name="create_a_new_class_for_grade_11_weekend_batch">Create a new class for Grade 11 Weekend batch</string>
    <string name="create_new_class">Create New Class</string>
    <string name="finalize_grade_10_maths_and_science_exam_papers">Finalize Grade 10 Maths and Science exam papers</string>
    <string name="finalize_exam_papers">Finalize Exam Papers</string>
    <string name="date">11/08/2021</string>

    //AddToDo Strings
    <string name="add_new_task">Add New Task</string>
    <string name="cancel">Cancel</string>
    <string name="task">Task</string>
    <string name="save">Save</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="backbtn">BackBTN</string>
    <string name="description">Description</string>
    <string name="enter_task_name">Enter Task Name</string>

    //QR Code Strings
    <string name="qr_code_generator">QR Code Generator</string>
    <string name="text_below_qr">Grant camera permissions and go to QR Code scanner and Generation page</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="qr_code_generater">QR Code Generator</string>
    <string name="enter_text_url">Enter Text/URL</string>
    <string name="generate">Generate</string>
    <string name="download">Download</string>
    <string name="text_url">Text / URL</string>
    <string name="copy">COPY</string>
    <string name="qr_code_scanner">QR Code Scanner</string>


    //voice cal Strings
    <string name="speech_prompt"> Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device does not support speech input </string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="txtvoicecal">Voice Calculator</string>


    //class strings
    <string name="addClass">Add New Class</string>
    <string name="classname">Class</string>

    <string name="title_activity_input_student">inputStudent</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="update">UPDATE</string>
    <string name="datex">Date</string>
    <string name="edit">View Student List</string>
    <string name="view_student_list">View Student List</string>
    <string name="main_title">Main Title</string>
    <string name="studentName">Student Name</string>
    <string name="Mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="title_activity_student_update_student">Student_UpdateStudent</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_new_class">Add New Class</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="enter_descsription">Enter Descsription</string>
    <string name="enter_batch">Enter Batch</string>
    <string name="batch">Batch</string>
    <string name="time">Time</string>
    <string name="analyze">Analyse</string>
    <string name="attendence">Attendence</string>
    <string name="editx">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_class">Update Class</string>
    <string name="add_student">Add Student</string>
    <string name="add_new_student">Add New Student</string>
    <string name="student_name">Name</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="student_id">Student ID</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="submit">Submit</string>
    <string name="input_date">Input Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_capital">CANCEL</string>
    <string name="save_cap">SAVE</string>
    <string name="more_info">More info</string>
    <string name="close">Close</string>


</resources>