<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/qrbg1"
    tools:context=".GenerateQRCode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/genback"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif"

        android:padding="10dp"
        android:text="@string/qr_code_generater"
        android:textColor="#fff"
        android:textSize="28dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/qrgentext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_text_url"
        android:textColorHint="#ededed"
        android:textColor="#fff" />


    <Button
        android:id="@+id/qrgenbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/generate" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/qrgendownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qrgenbtn"
        android:layout_centerHorizontal="true"
        android:text="@string/download"
        android:backgroundTint="@color/colorButton"/>

    <ImageView
        android:id="@+id/myImage1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/qrgen2"
        android:layout_marginTop="400dp"
        android:contentDescription="@string/todo" />



</RelativeLayout>