<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20px"
        android:text="@string/login_below_text"
        android:textColor="#e3e3e3"
        android:textSize="22sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#fff"
        android:textColorHint="#e3e3e3" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="#fff"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:textColorHint="#e3e3e3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:padding="12dp"
        android:drawableLeft="@drawable/ic_lock" />


    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/forgot_password"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        android:textColor="#fff" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#006080"
        />

    <ImageView
        android:layout_width="148dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/iclassappfront" />
    <TextView
        android:id="@+id/loginPageQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="16dp"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"

        />

</LinearLayout>