<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/loginbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/registerback"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/colorText"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/register_below_text"
        android:textColor="#e3e3e3"
        android:textSize="22sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/RegistrationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint_reg"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#fff"
        android:textColorHint="#e3e3e3" />

    <EditText
        android:id="@+id/RegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:inputType="textPassword"
        android:hint="@string/password_hint_reg"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:textColorHint="#e3e3e3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:padding="12dp"
        android:drawableLeft="@drawable/ic_lock" />

    <EditText
        android:id="@+id/RegistrationMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="#fff"
        android:inputType="textPassword"
        android:hint="@string/mobile_hint_reg"
        android:drawablePadding="10dp"
        android:textColorHint="#e3e3e3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:padding="12dp"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24" />


    <Button
        android:id="@+id/RegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#145fff"
        />

    <TextView
        android:id="@+id/RegistrationPageQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        />

</LinearLayout>