<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PopupView"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/add_new_student"
        android:textColor="@color/colorText"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <EditText
                android:id="@+id/studentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_student_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:importantForAutofill="no" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_margin="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <EditText
                android:id="@+id/studentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_student_id"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:importantForAutofill="no" />
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/addClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/colorButtonNew"
                android:textColor="@color/colorText"
                android:text="@string/cancel_capital"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/saveClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/colorButtonNew"
                android:textColor="@color/colorText"
                android:text="@string/save_cap"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>