<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/qrbg1"
    tools:context=".ScanQRActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/scanback"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_scanner"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        />

    <SurfaceView
        android:id="@+id/scancamera"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/scantext"
        android:text="@string/text_url"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bCopy"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:backgroundTint="@color/colorButton"/>

</LinearLayout>